# halflife-featureful

./: CMakeLists.txt  README.md  wscript
cl_dll/: CMakeLists.txt  GameStudioModelRenderer.cpp  GameStudioModelRenderer_Sample.cpp  StudioModelRenderer.cpp  ammo.cpp  ammohistory.cpp  ammohistory.h  cdll_int.cpp  cl_fx.h  cl_msg_fx.cpp  cl_util.h  com_weapons.cpp  com_weapons.h  death.cpp  demo.cpp  entity.cpp  ev_common.cpp  ev_hldm.cpp  events.cpp  hud.cpp  hud.h  hud_inventory.cpp  hud_inventory.h  hud_msg.cpp  hud_objecthint.cpp  hud_objecthint.h  hud_spectator.cpp  hud_update.cpp  in_camera.cpp  input.cpp  input_goldsource.cpp  interpolation.cpp  menu.cpp  saytext.cpp  scoreboard.cpp  status_icons.cpp  statusbar.cpp  studio_util.cpp  text_message.cpp  tri.cpp  (+11 more)
common/: beamdef.h  cl_entity.h  com_model.h  common_types.h  const.h  const_render.h  const_sound.h  const_waterlevel.h  dlight.h  entity_state.h  mathlib.h  particledef.h  pmtrace.h  r_efx.h  r_studioint.h  usercmd.h
dlls/: CMakeLists.txt  aflock.cpp  agrunt.cpp  airtank.cpp  ammoregistry.cpp  ammoregistry.h  ammunition.cpp  animating.cpp  animation.h  apache.cpp  barnacle.cpp  barney.cpp  basemonster.h  bigmomma.cpp  bloater.cpp  blood_types.h  bmodels.cpp  bullsquid.cpp  buttons.cpp  cbase.cpp  cbase.h  cdll_dll.h  classify.cpp  client.cpp  client.h  combat.cpp  (+164 more)
tests/: CMakeLists.txt  ent_templates_test.cpp  fixed_string_test.cpp  fixed_vector_test.cpp  followers_test.cpp  main.cpp  materials_test.cpp  objecthint_test.cpp  parsetext_test.cpp  soundscripts_test.cpp  visuals_test.cpp  warpball_test.cpp
(+38 files in other folders)
